ashu/ashu-java-spark/svc1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: spark-system
  name: ashulb1
  namespace: common
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spark-system
  type: ClusterIP
status:
  loadBalancer: {}
